blocks/v2-cards/v2-cards.css
.v2-cards {
  --card-container-gap: 24px;

  display: flex;
  flex-direction: column;
  gap: var(--card-container-gap);
  justify-content: center;
  max-width: var(--wrapper-width);
  margin: auto;
}

.v2-cards__card-item {
  background: var(--card-background);
  color: var(--card-text);
}

.v2-cards--no-background .v2-cards__card-item {
  --card-background: transparent;
}

.v2-cards__picture-wrapper {
  padding: 0;
}

.v2-cards__text-wrapper {
  padding: 24px;
}

.v2-cards__video-wrapper {
  margin: 0;
  position: relative;
}

.v2-cards__text-wrapper ul,
.v2-cards__text-wrapper {
  display: flex;
  flex-direction: column;
}

.v2-cards__text-wrapper ul {
  list-style: none;
  padding-inline-start: 5px;
}

.list-style-bullets .v2-cards__text-wrapper ul {
  list-style: disc;
  list-style-position: inside;
  padding-inline-start: 0;
}

.list-style-bullets li::before {
  display: none;
}

.v2-cards__text-wrapper li::before {
  content: "-";
  margin-right: 10px;
}

.v2-cards--no-background .v2-cards__text-wrapper {
  padding: 40px 0 0;
}

.v2-cards__picture {
  display: flex;
}

.v2-cards__video,
.v2-cards__image {
  background: var(--media-background);
  aspect-ratio: 16/9;
  width: 100%;
  object-fit: cover;
}

.v2-cards__video {
  height: 100%;
}

.v2-cards__video-wrapper .v2-video__playback-button {
  --playback-button-size: 48px;
}

.v2-cards--image-aspect-ratio-7-5 .v2-cards__video,
.v2-cards--image-aspect-ratio-7-5 .v2-cards__image {
  aspect-ratio: 7/5;
}

/* Show image as exactly 571px x 811px(≈0.704) */
.v2-cards--with-uncropped-image .v2-cards__image {
  aspect-ratio: 0.704;
}

.v2-cards__heading {
  font-family: var(--ff-subheadings-medium);
  font-size: var(--headline-5-font-size);
  font-weight: var(--headline-5-font-weight);
  line-height: var(--headline-5-line-height);
  letter-spacing: var(--headline-5-letter-spacing);
  margin: 0 0 7px;
  display: inline-flex;
  align-items: baseline;
}

.v2-cards__heading a {
  display: inline-flex;
  align-items: baseline;
}

.v2-cards__heading sup,
.v2-cards__heading sub {
  font-size: 0.85em;
  vertical-align: 0.3em;
}

.v2-cards__heading sup {
  vertical-align: 0.05em;
  position: relative;
  top: 0;
  padding-left: 0;
}

.v2-cards__heading em {
  font-size: 1em;
  margin: 0;
  padding: 0;
  letter-spacing: 0;
  margin-right: -0.2em;
}

.v2-cards--large-heading .v2-cards__heading {
  font-size: var(--headline-4-font-size);
  font-weight: var(--headline-4-font-weight);
  line-height: var(--headline-4-line-height);
  letter-spacing: var(--headline-4-letter-spacing);
}

.v2-cards__text-wrapper p {
  margin: 0;
  font-family: var(--ff-body);
  font-size: var(--body-1-font-size);
  font-style: normal;
  font-weight: var(--body-1-font-weight);
  line-height: var(--body-1-line-height);
  letter-spacing: var(--body-1-letter-spacing);
}

.v2-cards__text-wrapper strong {
  font-family: var(--ff-body);
  font-weight: 700;
}

.v2-cards__text-wrapper li strong {
  margin-right: 12px;
}

.v2-cards__text-wrapper .v2-cards__button-container {
  margin-top: 16px;
}

.v2-cards__button-container .v2-cards__button:any-link {
  align-items: flex-start;
}

.v2-cards__button-container .icon {
  stroke: currentcolor;
  width: 16px;
  height: 16px;
}

.v2-cards__button-container .icon svg {
  width: 16px;
  height: 16px;
}

/* 4 cards row variant */
.v2-cards--4-cards-row {
  --card-container-padding: 24px;
  --card-background: var(--c-primary-white);
}

.v2-cards--4-cards-row .v2-cards__text-wrapper {
  padding: 16px 0 0;
}

.v2-cards--4-cards-row .v2-cards__button-container {
  margin-top: 0;
}

.v2-cards--4-cards-row .v2-cards__button-container .v2-cards__button:any-link {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: var(--card-container-padding);
  font-size: var(--body-font-size-m);
}

.v2-cards--4-cards-row .v2-cards__button-container .icon,
.v2-cards--4-cards-row .v2-cards__button-container svg {
  width: 24px;
  height: 24px;
}

.v2-cards--4-cards-row .v2-cards__button-container svg {
  stroke-width: 0.1;
}

/* 2 cards row variant */
.v2-cards--2-cards-row .v2-cards__video,
.v2-cards--2-cards-row .v2-cards__image {
  aspect-ratio: 7/5;
}

/* spaced text variant */
.v2-cards.v2-cards--spaced .v2-cards__text-wrapper,
.v2-cards.v2-cards--spaced .v2-cards__text-wrapper ul {
  gap: 12px;
}

.v2-cards.v2-cards--spaced .v2-cards__heading {
  font-size: var(--headline-4-font-size);
  font-weight: var(--headline-4-font-weight);
  line-height: var(--headline-4-line-height);
  letter-spacing: var(--headline-4-letter-spacing);
}

.v2-cards.v2-cards--spaced strong {
  font-family: var(--ff-body);
  font-weight: 700;
}

.v2-cards.v2-cards--spaced li strong {
  margin-right: 12px;
}

.v2-cards.v2-cards--spaced .v2-cards__text-wrapper p,
.v2-cards.v2-cards--spaced .v2-cards__text-wrapper li {
  display: inline-flex;
  line-height: 150%;
  letter-spacing: 0.16px;
}

.v2-cards.v2-cards--spaced .v2-cards__text-wrapper .v2-cards__button-container {
  margin-top: 12px;
}

/* horizontal variant */
.v2-cards--horizontal .v2-cards__card-item,
.v2-cards--horizontal .v2-cards__video-wrapper {
  width: 100%;
}

/* with border variant */
.v2-cards.v2-cards--with-border .v2-cards__card-item {
  border: 1px solid var(--c-tertiary-light-cool-gray);
}

.v2-cards.v2-cards--with-border .v2-cards__video,
.v2-cards.v2-cards--with-border .v2-cards__image {
  aspect-ratio: 4/3;
}

.v2-cards.v2-cards--with-border .v2-cards__text-wrapper {
  padding: 16px;
}

.v2-cards.v2-cards--with-border .v2-cards__heading {
  margin-bottom: 4px;
}

.v2-cards.v2-cards--with-border .v2-cards__text-wrapper ul {
  gap: 8px;
}

/* heading with link and arrow */
.v2-cards.v2-cards--heading-with-arrow .v2-cards__heading a {
  color: var(--text-color);
  width: 100%;
  display: flex;
  justify-content: flex-start;
  align-items: center;
  gap: 4px;
}

.v2-cards.v2-cards--heading-with-arrow .v2-cards__heading a:focus-visible {
  outline: 2px solid var(--border-focus);
}

.v2-cards.v2-cards--heading-with-arrow .v2-cards__heading a::after {
  height: 28px;
  width: 28px;
  content: url('../../icons/arrow-right.svg');
}

@media (min-width: 744px) {
  .v2-cards {
    --card-container-gap: 16px;

    flex-flow: row wrap;
    justify-content: center;
  }

  .v2-cards__card-item {
    max-width: calc((100% - 32px) / 3);
    width: 100%;
  }

  .v2-cards--horizontal .v2-cards__card-item {
    max-width: 720px;
    display: flex;
    gap: 46px;
  }

  .v2-cards--horizontal .v2-cards__picture-wrapper,
  .v2-cards--horizontal .v2-cards__media-wrapper,
  .v2-cards--horizontal .v2-cards__text-wrapper {
    width: 50%;
  }

  .v2-cards--horizontal .v2-cards__video-wrapper,
  .v2-cards--horizontal .v2-cards__media-wrapper {
    display: flex;
  }

  .v2-cards--horizontal .v2-cards__video-wrapper,
  .v2-cards--horizontal .v2-cards__picture {
    margin: auto;
  }

  /* 4 cards row variant */
  .v2-cards--4-cards-row {
    --card-container-padding: 16px;
  }

  .v2-cards--4-cards-row .v2-cards__card-item {
    max-width: calc((100% - 2 * var(--card-container-padding)) / 2);
  }

  /* 2 cards row variant */
  .v2-cards--2-cards-row .v2-cards__card-item {
    max-width: calc((100% - var(--card-container-gap) - 182px) / 2);
  }
}

@media (min-width: 1200px) {
  /* 4 cards row variant */
  .v2-cards--4-cards-row .v2-cards__card-item {
    max-width: calc((100% - 3 * var(--card-container-padding)) / 4);
  }
}

